--- a/package.json
+++ b/package.json
@@ -36,13 +36,18 @@
     "bech32": "0.0.3",
     "bigi": "^1.4.0",
     "bip66": "^1.1.0",
+    "bitcoin-net": "^5.2.0",
     "bitcoin-ops": "^1.3.0",
+    "bitcoin-protocol": "^4.1.3",
+    "bitcoind-rpc": "^0.8.1",
     "blake2b": "https://github.com/BitGo/blake2b#6268e6dd678661e0acc4359e9171b97eb1ebf8ac",
     "bs58check": "^2.0.0",
     "create-hash": "^1.1.0",
     "create-hmac": "^1.1.3",
+    "cryptoconditions-js": "git+https://github.com/dimxy/cryptoconditions-js.git#master",
     "debug": "~3.1.0",
     "ecurve": "^1.0.0",
+    "envify": "^4.1.0",
     "merkle-lib": "^2.0.10",
     "pushdata-bitcoin": "^1.0.1",
     "randombytes": "^2.0.1",
