--- a/package.json
+++ b/package.json
@@ -53,7 +53,16 @@
     "safe-buffer": "^5.0.1",
     "typeforce": "^1.11.3",
     "varuint-bitcoin": "^1.0.4",
-    "wif": "^2.0.1"
+    "wif": "^2.0.1",
+    "bitcoin-util": "^2.0.0",
+    "event-cleanup": "^1.0.3",
+    "get-browser-rtc": "^1.0.2",
+    "object-assign": "^4.1.0",
+    "old": "^0.1.3",
+    "once": "^1.3.3",
+    "setimmediate": "^1.0.4",
+    "through2": "^2.0.1",
+    "websocket-stream": "^3.3.0"
   },
   "devDependencies": {
     "bip39": "^2.3.0",
