--- a/package.json
+++ b/package.json
@@ -38,31 +38,33 @@
     "bip66": "^1.1.0",
     "bitcoin-ops": "^1.3.0",
     "bitcoin-protocol": "^4.1.3",
+    "bitcoin-util": "^2.0.0",
     "bitcoind-rpc": "^0.8.1",
-    "blake2b": "https://github.com/BitGo/blake2b#6268e6dd678661e0acc4359e9171b97eb1ebf8ac",
+    "blake2b": "git+https://github.com/BitGo/blake2b.git#6268e6dd678661e0acc4359e9171b97eb1ebf8ac",
     "bs58check": "^2.0.0",
+    "bufferutil": "^4.0.3",
     "create-hash": "^1.1.0",
     "create-hmac": "^1.1.3",
     "cryptoconditions-js": "git+https://github.com/dimxy/cryptoconditions-js.git#master",
     "debug": "~3.1.0",
     "ecurve": "^1.0.0",
     "envify": "^4.1.0",
-    "merkle-lib": "^2.0.10",
-    "pushdata-bitcoin": "^1.0.1",
-    "randombytes": "^2.0.1",
-    "safe-buffer": "^5.0.1",
-    "typeforce": "^1.11.3",
-    "varuint-bitcoin": "^1.0.4",
-    "wif": "^2.0.1",
-    "bitcoin-util": "^2.0.0",
     "event-cleanup": "^1.0.3",
     "get-browser-rtc": "^1.0.2",
+    "merkle-lib": "^2.0.10",
     "object-assign": "^4.1.0",
     "old": "^0.1.3",
     "once": "^1.3.3",
+    "pushdata-bitcoin": "^1.0.1",
+    "randombytes": "^2.0.1",
+    "safe-buffer": "^5.2.1",
     "setimmediate": "^1.0.4",
     "through2": "^2.0.1",
-    "websocket-stream": "^3.3.0"
+    "typeforce": "^1.11.3",
+    "utf-8-validate": "^5.0.5",
+    "varuint-bitcoin": "^1.0.4",
+    "websocket-stream": "^3.3.0",
+    "wif": "^2.0.1"
   },
   "devDependencies": {
     "bip39": "^2.3.0",
