added keyToWif function as a helper

--- a/package.json
+++ b/package.json
@@ -34,14 +34,14 @@
   ],
   "dependencies": {
     "bech32": "0.0.3",
-    "bigi": "^1.4.0",
+    "bigi": "1.4.2",
     "bip66": "^1.1.0",
     "bitcoin-ops": "^1.3.0",
     "bitcoin-protocol": "^4.1.3",
     "bitcoin-util": "^2.0.0",
     "bitcoind-rpc": "^0.8.1",
     "blake2b": "git+https://github.com/BitGo/blake2b.git#6268e6dd678661e0acc4359e9171b97eb1ebf8ac",
-    "bs58check": "^2.0.0",
+    "bs58check": "2.1.2",
     "bufferutil": "^4.0.3",
     "create-hash": "^1.1.0",
     "create-hmac": "^1.1.3",
@@ -60,6 +60,7 @@
     "safe-buffer": "^5.2.1",
     "secp256k1": "^3.5.2",
     "setimmediate": "^1.0.4",
+    "sha.js": "2.4.11",
     "through2": "^2.0.1",
     "typeforce": "^1.11.3",
     "utf-8-validate": "^5.0.5",
