--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tokel/bitgo-komodo-cc-lib",
-  "version": "0.1.4",
+  "version": "0.1.16",
   "description": "Client-side Bitcoin JavaScript library with Komodo cryptocondions support",
   "main": "./src/index.js",
   "engines": {
@@ -36,8 +36,10 @@
     "config"
   ],
   "dependencies": {
+    "@tokel/cryptoconditions": "0.1.0",
     "bech32": "0.0.3",
     "bigi": "1.4.2",
+    "bip39": "^2.3.0",
     "bip66": "^1.1.0",
     "bitcoin-ops": "^1.3.0",
     "bitcoin-protocol": "^4.1.3",
@@ -48,7 +50,6 @@
     "bufferutil": "^4.0.3",
     "create-hash": "^1.1.0",
     "create-hmac": "^1.1.3",
-    "cryptoconditions-js": "git+https://github.com/dimxy/cryptoconditions-js.git#master",
     "debug": "~3.1.0",
     "ecurve": "^1.0.0",
     "envify": "^4.1.0",
@@ -68,11 +69,11 @@
     "typeforce": "^1.11.3",
     "utf-8-validate": "^5.0.5",
     "varuint-bitcoin": "^1.0.4",
+    "webassembly": "0.9.0",
     "websocket-stream": "^3.3.0",
     "wif": "^2.0.1"
   },
   "devDependencies": {
-    "bip39": "^2.3.0",
     "bip65": "^1.0.1",
     "bs58": "^4.0.0",
     "dhttp": "^2.4.2",
