--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "bech32": "0.0.3",
     "bigi": "^1.4.0",
     "bip66": "^1.1.0",
+    "bitcoin-merkle-proof": "^0.1.0",
     "bitcoin-ops": "^1.3.0",
     "bitcoin-protocol": "^4.1.3",
     "bitcoin-util": "^2.0.0",
@@ -58,6 +59,7 @@
     "pushdata-bitcoin": "^1.0.1",
     "randombytes": "^2.0.1",
     "safe-buffer": "^5.2.1",
+    "secp256k1": "^3.5.2",
     "setimmediate": "^1.0.4",
     "through2": "^2.0.1",
     "typeforce": "^1.11.3",
@@ -80,6 +82,5 @@
   },
   "license": "MIT",
   "optionalDependencies": {
-    "secp256k1": "^3.5.2"
   }
 }
