--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tokel/bitgo-komodo-cc-lib",
-  "version": "0.1.17",
+  "version": "0.1.19",
   "description": "Client-side Bitcoin JavaScript library with Komodo cryptocondions support",
   "main": "./src/index.js",
   "engines": {
@@ -86,6 +86,5 @@
     "standard": "^9.0.2"
   },
   "license": "MIT",
-  "optionalDependencies": {
-  }
+  "optionalDependencies": {}
 }
