--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "bitcoin-protocol": "^4.1.3",
     "bitcoin-util": "^2.0.0",
     "bitcoind-rpc": "^0.8.1",
-    "blake2b": "git+https://github.com/BitGo/blake2b.git#6268e6dd678661e0acc4359e9171b97eb1ebf8ac",
+    "blake2b": "^2.1.3",
     "bs58check": "2.1.2",
     "bufferutil": "^4.0.3",
     "create-hash": "^1.1.0",
