--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@komodo/bitgo-komodo-cc-lib",
   "version": "0.1.0",
-  "description": "Client-side Bitcoin JavaScript library with Komodo cryptocondions support",
+  "description": "Client-side Bitcoin JavaScript library with Komodo cryptoconditions support",
   "main": "./src/index.js",
   "engines": {
     "node": ">=4.0.0"
