--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@tokel/bitgo-komodo-cc-lib",
-  "version": "0.1.51",
+  "name": "@tokel/nspv-js",
+  "version": "0.0.1",
   "description": "Client-side Bitcoin JavaScript library with Komodo cryptocondions support",
   "main": "./src/index.js",
   "engines": {
