--- a/package.json
+++ b/package.json
@@ -79,12 +79,11 @@
     "bs58": "^4.0.0",
     "dhttp": "^2.4.2",
     "minimaldata": "^1.0.2",
-    "mocha": "^6.2.3",
-    "nyc": "^14.1.1",
+    "mocha": "9.1.3",
+    "nyc": "15.1.0",
     "proxyquire": "^1.4.0",
     "sinon": "^1.12.2",
     "standard": "^9.0.2"
   },
-  "license": "MIT",
-  "optionalDependencies": {}
+  "license": "MIT"
 }
