--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tokel/nspv-js",
-  "version": "0.1.2",
+  "version": "0.1.4",
   "description": "Client-side Bitcoin JavaScript library with Komodo cryptocondions support",
   "main": "./src/index.js",
   "engines": {
@@ -27,7 +27,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/dimxy/bitgo-komodo-cc-lib.git"
+    "url": "https://github.com/TokelPlatform/nspv-js"
   },
   "files": [
     "src",
