--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "typeforce": "^1.11.3",
     "utf-8-validate": "^6.0.3",
     "varuint-bitcoin": "^1.0.4",
-    "webassembly": "0.11.0",
+    "webassembly": "^0.9.0",
     "websocket-stream": "^5.0.0",
     "wif": "^4.0.0"
   },
