--- a/package.json
+++ b/package.json
@@ -45,15 +45,12 @@
     "bitcoin-ops": "^1.3.0",
     "bitcoin-protocol": "^4.1.3",
     "bitcoin-util": "^2.0.0",
-    "bitcoind-rpc": "^0.8.1",
-    "blake2b": "^2.1.3",
+    "blake2b": "git+https://github.com/TheComputerGenie/blake2b",
     "bs58check": "2.1.2",
-    "bufferutil": "^4.0.3",
     "create-hash": "^1.1.0",
     "create-hmac": "^1.1.3",
     "debug": "~3.1.0",
     "ecurve": "^1.0.0",
-    "envify": "^4.1.0",
     "event-cleanup": "^1.0.3",
     "get-browser-rtc": "^1.0.2",
     "merkle-lib": "^2.0.10",
@@ -68,9 +65,7 @@
     "sha.js": "2.4.11",
     "through2": "^2.0.1",
     "typeforce": "^1.11.3",
-    "utf-8-validate": "^5.0.5",
     "varuint-bitcoin": "^1.0.4",
-    "webassembly": "0.9.0",
     "websocket-stream": "^3.3.0",
     "wif": "^2.0.1"
   },
@@ -79,11 +74,11 @@
     "bs58": "^4.0.0",
     "dhttp": "^2.4.2",
     "minimaldata": "^1.0.2",
-    "mocha": "9.1.3",
+    "mocha": "^9.2.2",
     "nyc": "15.1.0",
     "proxyquire": "^1.4.0",
     "sinon": "^1.12.2",
-    "standard": "^9.0.2"
+    "standard": "^17.1.0"
   },
   "license": "MIT"
 }
