--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "envify": "^4.1.0",
     "event-cleanup": "^1.0.3",
     "get-browser-rtc": "^1.0.2",
+    "got": "^14.4.3",
     "merkle-lib": "^2.0.10",
     "object-assign": "^4.1.0",
     "old": "^0.2.0",
@@ -70,14 +71,13 @@
     "typeforce": "^1.11.3",
     "utf-8-validate": "^6.0.3",
     "varuint-bitcoin": "^2.0.0",
-    "webassembly": "^0.11.0",
+    "webassembly": "^0.9.0",
     "websocket-stream": "^5.0.0",
     "wif": "^5.0.0"
   },
   "devDependencies": {
     "bip65": "^1.0.1",
     "bs58": "^6.0.0",
-    "dhttp": "^3.0.0",
     "minimaldata": "^1.0.2",
     "mocha": "10.8.2",
     "nyc": "17.1.0",
